crates/biome_js_analyze/tests/specs/nursery/noPlaywrightElementHandle/invalid/dollar-dollar.js
/* should generate diagnostics */
const buttons = await page.$$('.btn');

